# vivacious

./: .gitmodules  .luacheckrc  CMakeLists.txt  README.md  Tuprules.tup  host.tup  toolchain.lua  tup.config
apis/: CMakeLists.txt  apis.lua  core.h.lua  devicememorypool.lua  memorypool.lua  rendergraph.lua  shaderbank.lua  stdlib.lua  test.c  test.lua  vivacious.h  vivacious.h.lua  vkbplate.lua  vkinitializer.lua  vkmemory.lua  vkmemorypool.lua  vkpipeline.lua  vkshader.lua  vulkan-human.lua  vulkan-raw.lua  vulkan.lua  window.lua
apis/core/: btest.lua  common.lua  docsmd.lua  generation.lua  gwrapper.lua  headerc.lua  linter.lua  lintwrapper.lua  main.lua
apis/generator/: c.lua  cbound.lua  stdc.lua  stdlib.lua
configs/: all.config  default.config  linux32.config
demos/: CMakeLists.txt
demos/vkbtest/: debug.c  main.c
demos/vkhelp/: CMakeLists.txt  Tupfile  base.prespv  base.spv  base.spv.in  base.vert  debug.c  debug.h  load.prespv  load.spv  load.vert  main.c  recolor.prespv  recolor.spv  recolor.spv.in  recolor.vert  render.frag  render.prespv  render.spv  render.spv.in  shaders.lua  small.prespv  small.spv  small.vert
demos/vkmtest/: debug.c
demos/vkptest/: fbuff.c  frag.spv  init.c  pipeline.lua  shader.vert  vert.spv  window.c
demos/vktest/: CMakeLists.txt  Tupfile  cbuffers.c  common.c  common.h  debug.c  instdev.c  vulkantest.c
demos/witest/: Tupfile  main.c
docs/: Tupfile  docsmd.lua
examples/: CMakeLists.txt
examples/testtest/: CMakeLists.txt  testtest.c
examples/vkbptest/: CMakeLists.txt  main.c
examples/vkbtest/: CMakeLists.txt  debug.c  main.c
examples/vkmtest/: CMakeLists.txt  debug.c  main.c
examples/vkptest/: CMakeLists.txt  common.h  debug.c  fbuff.c  frag.spv  init.c  main.c  pipeline.lua  shader.frag  shader.vert  swapchain.c  vert.spv  window.c
examples/vktest/: CMakeLists.txt  cbuffers.c  common.c  common.h  debug.c  instdev.c  swapchain.c  vulkantest.c  window.c
examples/vulkantest/: CMakeLists.txt  cbuffers.c  common.c  common.h  debug.c  instdev.c  swapchain.c  vktest.c  vulkantest.c  window.c
examples/witest/: CMakeLists.txt  main.c
include/: CMakeLists.txt  core.h  libvivacious.h  readme.md  slaxml.lua  suptest.lua  test.h  traversal.lua  vivacious.h  vkbplate.h  vkmemory.h  vkpipeline.h  vkpipline.h  vulkan-structs.lua  vulkan.lua  window.h
include/vivacious/: Tupfile  headerc.lua  vivacious.h
lib/: Tupfile
src/: CMakeLists.txt  Tupfile  Tuprules.tup  core.h  cpdl.c  cpdl.h  internal.h  libvivacious.h  lua.h  luaopen.c  lvulkan-bitmask.lua  lvulkan-enum.lua  lvulkan-handle.lua  lvulkan-struct.lua  lvulkan-test.lua  lvulkan-types.lua  lvulkan-union.lua  lvulkan.c  lvulkan.lua  suptest.lua  test.c  vkbplate.c  vkmemory.c  vkpipeline.c  vulkan.lua
src/lvulkan/: bitmask.lua  enum.lua  handle.lua  lvulkan.c  struct.lua  test.lua  union.lua
src/vkbplate/: default.c  test.c
src/vkinitializer/: default.c  test.c
src/vkmemory/: default.c  test.c
src/vkpipeline/: default.c  test.c
src/vkshader/: default.c  mcopy-idshift.c.lua  mcopy-idshift.lua  mcopy.h  sections.h.lua  sections.lua  test.c
src/vulkan/: Tupfile  default.c  libdl.lua
src/window/: Tupfile  default.c  findxcb.lua  x.c  xcb.c  xcb.h
tmp-notes/: vkm.md
